--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "description": "A Package for creating sorting and filtering classes.",
     "license": "MIT",
     "require": {
-        "php": "^8.0",
-        "laravel/framework": "^11.0"
+        "php": "^8.1",
+        "laravel/framework": "^10.0|^11.0|^12.0"
     },
     "authors": [
         {
